benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_Mul_Zeroes_iter3_error.log
=== Verification Error - Iteration 3 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_Mul_Zeroes.rs
Time: 2025-09-15 19:36:52

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:30:15
   |
30 |     if exp == 0 {
   |        ---    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:31:9
   |
25 | fn powmod(base: nat, exp: nat, m: nat) -> (res: nat)
   |                                                 --- expected `vstd::prelude::nat` because of return type
...
31 |         1
   |         ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:33:30
   |
33 |         let half_exp = exp / 2;
   |                        ---   ^ expected `nat`, found integer
   |                        |
   |                        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:36:31
   |
36 |         let result = if exp % 2 == 0 { p } else { ((p * (base % m)) % m) % m };
   |                         ---   ^ expected `nat`, found integer
   |                         |
   |                         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:36:36
   |
36 |         let result = if exp % 2 == 0 { p } else { ((p * (base % m)) % m) % m };
   |                         -------    ^ expected `nat`, found integer
   |                         |
   |                         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:46:13
   |
46 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:49:33
   |
49 |         let mut v = nat2vec(n / 2);
   |                             -   ^ expected `nat`, found integer
   |                             |
   |                             expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:50:23
   |
50 |         v.push(if n % 2 == 1 { '1' } else { '0' });
   |                   -   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:50:28
   |
50 |         v.push(if n % 2 == 1 { '1' } else { '0' });
   |                   -----    ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:30:15
   |
30 |     if exp == 0 {
   |        ---    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:31:9
   |
25 | fn powmod(base: nat, exp: nat, m: nat) -> (res: nat)
   |                                                 --- expected `vstd::prelude::nat` because of return type
...
31 |         1
   |         ^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:33:30
   |
33 |         let half_exp = exp / 2;
   |                        ---   ^ expected `nat`, found integer
   |                        |
   |                        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:36:31
   |
36 |         let result = if exp % 2 == 0 { p } else { ((p * (base % m)) % m) % m };
   |                         ---   ^ expected `nat`, found integer
   |                         |
   |                         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:36:36
   |
36 |         let result = if exp % 2 == 0 { p } else { ((p * (base % m)) % m) % m };
   |                         -------    ^ expected `nat`, found integer
   |                         |
   |                         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:46:13
   |
46 |     if n == 0 {
   |        -    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:49:33
   |
49 |         let mut v = nat2vec(n / 2);
   |                             -   ^ expected `nat`, found integer
   |                             |
   |                             expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:50:23
   |
50 |         v.push(if n % 2 == 1 { '1' } else { '0' });
   |                   -   ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_Mul_Zeroes_impl.rs:50:28
   |
50 |         v.push(if n % 2 == 1 { '1' } else { '0' });
   |                   -----    ^ expected `nat`, found integer
   |                   |
   |                   expected because this is `vstd::prelude::nat`

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0308`.
